--- a/src/style/_settings.scss
+++ b/src/style/_settings.scss
@@ -1,3 +1,5 @@
+// GENERAL SETTINGS
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -13,5 +15,7 @@ a {
   text-decoration: none;
 }
 
+// VARIABLES
 $primaryColor: #ff0101;
 $secondaryColor: #020203;
+$tertiaryColor: #fbfbfb;
