--- a/src/style/components/_header.scss
+++ b/src/style/components/_header.scss
@@ -4,6 +4,7 @@
   justify-content: space-between;
   background-color: $secondaryColor;
   padding: 17px 30px;
+  box-shadow: 0px 4px 4px rgb(0 0 0 / 25%);
 
   &__nav {
     width: 75%;
@@ -14,7 +15,7 @@
     justify-content: space-around;
     align-items: center;
     color: white;
-    font-size: 24px;
+    font-size: 23px;
     font-weight: 500;
 
     li {
