--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -2,3 +2,6 @@
 @import "./components/header";
 @import "./components/aside";
 @import "./components/squareIcns";
+@import "./components/mainContentWrapper";
+@import "./components/userHeading";
+@import "./components/keyData";
