--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -5,3 +5,4 @@
 @import "./components/mainContentWrapper";
 @import "./components/userHeading";
 @import "./components/keyData";
+@import "./components/graphs";
