AverageSessions chart almost complete

--- a/src/style/components/_graphs.scss
+++ b/src/style/components/_graphs.scss
@@ -1,4 +1,35 @@
 .sessionAverageGraph {
   background-color: $primaryColor;
   border-radius: 5px;
+
+  &__legend {
+    position: absolute;
+    font-size: 15px;
+    font-weight: 500;
+    width: 180px;
+    padding: 30px;
+    opacity: 0.5;
+    color: white;
+    line-height: 24px;
+  }
+
+  &__label {
+    position: absolute;
+    color: white;
+    opacity: 0.5;
+    top: 525px;
+    left: 245px;
+    width: 245px;
+    letter-spacing: 10px;
+  }
+
+  &__tooltip {
+    background-color: white;
+  }
+
+  &__value {
+    color: black;
+    font-size: 10px;
+    padding: 10px;
+  }
 }
