--- a/src/style/components/_graphs.scss
+++ b/src/style/components/_graphs.scss
@@ -1,3 +1,4 @@
+// AVERAGE SESSIONS GRAPH
 .sessionAverageGraph {
   background-color: $primaryColor;
   border-radius: 5px;
@@ -31,5 +32,24 @@
     color: black;
     font-size: 10px;
     padding: 10px;
+  }
+}
+
+// PERFORMANCE GRAPH
+.performanceGraph {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 258px;
+  height: 263px;
+  background-color: #282d30;
+  border-radius: 5px;
+
+  .recharts-polar-grid-angle {
+    display: none;
+  }
+
+  tspan {
+    rotate: -20;
   }
 }
