--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -2,7 +2,7 @@
 @import "./components/header";
 @import "./components/aside";
 @import "./components/squareIcns";
-@import "./components/mainContentWrapper";
+@import "./components/mainContent";
 @import "./components/userHeading";
 @import "./components/keyData";
 @import "./components/graphs";
