--- a/src/style/components/_userHeading.scss
+++ b/src/style/components/_userHeading.scss
@@ -12,3 +12,10 @@
     margin: 30px 0;
   }
 }
+
+// MEDIA QUERIES
+@media only screen and (max-width: 1160px) {
+  .userHeading__recap {
+    margin: 15px 0;
+  }
+}
