--- a/src/style/components/_graphs.scss
+++ b/src/style/components/_graphs.scss
@@ -57,8 +57,21 @@
     align-self: flex-start;
     color: #282d30;
   }
+
+  &__tooltip {
+    background-color: #e60000;
+    padding: 10px 5px;
+  }
+
+  &__value {
+    color: white;
+    font-size: 9px;
+    padding: 8px 5px;
+    font-weight: 500;
+  }
 }
 
+// MAIN GRAPHS
 .mainGraphs {
   &__wrapper {
     display: flex;
@@ -68,6 +81,29 @@
 
   &__smaller-group {
     display: flex;
+    justify-content: space-between;
+  }
+}
+
+// MEDIA QUERIES
+@media only screen and (max-width: 1410px) {
+  .mainGraphs {
+    &__wrapper {
+      padding-top: 30px;
+    }
+
+    &__smaller-group {
+      justify-content: space-evenly;
+    }
+  }
+
+  .dailyActivityGraph {
+    margin: auto;
+  }
+}
+
+@media only screen and (max-width: 1160px) {
+  .mainGraphs__smaller-group {
     justify-content: space-between;
   }
 }
