Added useFetch custom hook for user headline and key data

--- a/src/style/components/_header.scss
+++ b/src/style/components/_header.scss
@@ -18,7 +18,8 @@
     font-size: 23px;
     font-weight: 500;
 
-    li {
+    .list-item {
+      color: white;
       cursor: pointer;
       text-decoration-line: none;
       transition: all 200ms ease-in-out;
